# hspec-test-framework

./: .travis.yml  README.markdown  hspec-test-framework.cabal
hspec-test-framework-th/: hspec-test-framework-th.cabal
hspec-test-framework-th/example/: Main.hs
hspec-test-framework-th/src/Test/Framework/: TH.hs
hspec-test-framework-th/test/: Spec.hs
src/Test/: Framework.hs
src/Test/Framework/Providers/: API.hs  HUnit.hs  QuickCheck2.hs
