name:             hspec-test-framework
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed: False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Framework
      Test.Framework.Providers.API
      Test.Framework.Providers.HUnit
      Test.Framework.Providers.QuickCheck2
  build-depends:
      base    == 4.*
    , hspec
    , QuickCheck
    , HUnit
