name:             hspec-test-framework
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
bug-reports:      https://github.com/sol/hspec-test-framework/issues
homepage:         http://hspec.github.io/
synopsis:         Run test-framework tests with Hspec
description:      Run test-framework tests with Hspec

source-repository head
  type: git
  location: https://github.com/sol/hspec-test-framework

library
  exposed: False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Framework
      Test.Framework.Providers.API
      Test.Framework.Providers.HUnit
      Test.Framework.Providers.QuickCheck2
  build-depends:
      base    == 4.*
    , hspec   >= 1.6.0
    , QuickCheck
    , HUnit
